--- a/prosjekt2/latex/project2.tex
+++ b/prosjekt2/latex/project2.tex
@@ -38,15 +38,21 @@
 
 \title{Project 2 in FYS3150}
 \author{Bendik Steinsvåg Dalen, Ulrik Seip}
-%\renewcommand\thesubsection{\thesection.\alph{subsection}}
+%\renewcommand\thesection.\alph{section}
+\renewcommand\thesection{\Alph{section}}
+\renewcommand\thesubsection{\thesection.\alph{subsection}}
 \renewcommand\thesubsubsection{\thesubsection.\roman{subsubsection}}
 \begin{document}
 \maketitle
 
 \section{}
-\subsection{}
-12351
-
+\section{}
+\section{}
+\section{}
+\section{}
+\section{}
+\section{}
+\section{}
 
 %\begin{figure}[h!]
 %	\centering 
