--- a/prosjekt2/latex/project2.tex
+++ b/prosjekt2/latex/project2.tex
@@ -42,6 +42,8 @@
 \begin{document}
 \maketitle
 
+https://github.com/UlrikSeip/Projects/tree/master/prosjekt2
+
 \section{ABSTRACT}
 
 In this project we have implemented Jacobian algorithm, to find eigenvectors, and their corresponding eigenvalues in tridiagonal matrices. We then used this to model a harmonic oscillator problem in three dimensions, with one and two electrons. This turned out to be a computationally heavy, but relatively accurate method.
@@ -55,7 +57,7 @@ The modelling of an electron in a harmonic oscillator potential is one of the mo
 \section{METHOD}
 
 \subsection{Implementing the Jacobian algorithm}
-The implementation follows a standard recipe:
+The implementation follows a standard recipe:\cite{lecture notes}
 We start with the relation
 \begin{equation*}\cot 2\theta=\tau = \frac{a_{ll}-a_{kk}}{2a_{kl}}.
 \end{equation*}
