Startet på rapport

--- a/prosjekt2/latex/project2.tex
+++ b/prosjekt2/latex/project2.tex
@@ -57,6 +57,7 @@ In this project we have coded a implementation of Jacobi’s rotation algorithm,
 
 \subsection{Quantum dots in three dimensions, one electron}
 
+ 
 \subsection{Quantum dots in three dimensions, two electrons}
 
 
@@ -65,6 +66,7 @@ In this project we have coded a implementation of Jacobi’s rotation algorithm,
 
 \section{CONCLUSIONS}
 
+\section{APENDICES}
 
 \section{REFERENCES}
 
