--- a/prosjekt2/latex/project2.tex
+++ b/prosjekt2/latex/project2.tex
@@ -49,15 +49,33 @@ In this project we have coded a implementation of Jacobi’s rotation algorithm,
 
 
 \section{METHOD}
-\subsection{Mathematical basis}
 
 \subsection{Basic code, eller noe}
 
 \subsection{Testing the code}
 
 \subsection{Quantum dots in three dimensions, one electron}
+Now that we had a general algorithm we used it to model a electron that moves in a three-dimensional harmonic oscillator potential. In other words, we looked for the solution of the radial part of Schroedinger’s
+equation for one electron, which reads
+\begin{align}
+- \frac{\hbar^2}{2m} \left( \frac{1}{r^2} \frac{d}{dr} r^2 \frac{d}{dr} - \frac{l(l+1)}{r^2}\right) R(r) + V(r) R(r) = ER(r).
+\end{align}
+This problem also has analytical solutions, so we can test how accurate our algorithm is.
 
- 
+(Some math-stuff).
+
+The Schroedinger’s equation then becomes
+\begin{align}
+-\frac{d^2}{d\rho^2} u(\rho) + \rho^2 u(\rho) = \lambda y(\rho). \label{simpel SE}
+\end{align}
+Since we are working in radial coordinates we have $\rho \in [0,\infty)$. Since we can't represent infinity on a computer we have to find an aproximation, which we will come back to later. For now we define $\rho_{min}=0$ and $\rho_{max}$ to represent the  minimum and maximum values of $\rho$. 
+
+Function \ref{simpel SE} is an differential equation that can be modeled similarly to (ting). If we have $n$ mesh points we get a step length
+\begin{align}
+h = \frac{\rho_{max} - \rho_{min}}{n}.
+\end{align}
+
+
 \subsection{Quantum dots in three dimensions, two electrons}
 
 
