--- a/prosjekt3/LaTex/prosject3.tex
+++ b/prosjekt3/LaTex/prosject3.tex
@@ -47,14 +47,14 @@ https://github.com/UlrikSeip/Projects/tree/master/prosjekt3
 \section{ABSTRACT}
 
 
-
 \section{INTRODUCTION}
+When simulating orbits for several celestial bodies with high accuracy, the computation can be expensive, and so it is paramount to strike a balance between efficiency and accuracy. To explore this balance, we run simulations using the Velocity-Verlet integration method, and comparing with the Forward-Euler method. Having found the optimal way to simulate the orbits, we move on to
+
 
 \section{METHOD}
 
 
 \section{RESULTS}
-
 
 
 \section{CONCLUSIONS}
