--- a/prosjekt3/LaTex/prosject3.tex
+++ b/prosjekt3/LaTex/prosject3.tex
@@ -52,6 +52,16 @@ When simulating orbits for several celestial bodies with high accuracy, the comp
 
 
 \section{METHOD}
+\subsection{a}
+As the moition of the Earth around the sun is nearly circualr, the gravitational force on Earth from the Sun can be writen
+\begin{align}
+F_{G} = \frac{M_{\text{Earth}}v^{2}}{r} = \frac{GM_{\odot} M_{\text{Earth}}}{r^{2}} = \frac{M_{\text{Earth}} 4\pi ^{2}}{r^{2}}  \mathrm{AU}^{3}/ \mathrm{yr}^{2},
+\end{align}
+wich gives the acceleration
+\begin{align*}
+f^{(2)}(r) = \frac{M_{\text{Earth}} 4\pi ^{2} }{r^{2}} \mathrm{AU}^{3}/ \mathrm{yr}^{2}.
+\end{align*}
+
 
 
 \section{RESULTS}
