--- a/prosjekt3/LaTex/prosject3.tex
+++ b/prosjekt3/LaTex/prosject3.tex
@@ -45,22 +45,28 @@
 https://github.com/UlrikSeip/Projects/tree/master/prosjekt3
 
 \section{ABSTRACT}
-
+In this project we simulate the orbits of all the 8 planets in the solar system, and Pluto. Comparing the Forward Euler and the Velocity Verlet methods we find the Velocity Verlet method to be preferable due to its conservation of energy. We then test the Velocity Verlet method against the analytically derived escape velocity and perihelion of Mercury.
 
 \section{INTRODUCTION}
-When simulating orbits for several celestial bodies with high accuracy, the computation can be expensive, and so it is paramount to strike a balance between efficiency and accuracy. To explore this balance, we run simulations using the Velocity-Verlet integration method, and comparing with the Forward-Euler method. Having found the optimal way to simulate the orbits, we move on to
+Our solar system is littered with asteroids, planets and moons. This plethora objects floating around in space makes for a perfect exercise in solving multi body differential equations in 3 dimensions.
+
+When simulating orbits for several celestial bodies with high accuracy, the computation can be expensive, and so it is paramount to strike a balance  between efficiency and accuracy. To explore this balance, we will run simulations using the Velocity-Verlet integration method, and comparing with the Forward-Euler method. Having found the optimal way to simulate the orbits, we move on to test the effect of the gravitational pull between planets, and we also look at the (something about the perhelion of Mercury).
 
 
 \section{METHOD}
-\subsection{a}
-As the moition of the Earth around the sun is nearly circualr, the gravitational force on Earth from the Sun can be writen
+\subsection{Newtons law of gravitation}
+One of the most common representations of newtons law of gravitation is
 \begin{align}
-F_{G} = \frac{M_{\text{Earth}}v^{2}}{r} = \frac{GM_{\odot} M_{\text{Earth}}}{r^{2}} = \frac{M_{\text{Earth}} 4\pi ^{2}}{r^{2}}  \mathrm{AU}^{3}/ \mathrm{yr}^{2},
+F_{G} = \frac{M_{\text{Earth}}v^{2}}{r} = \frac{GM_{\odot} M_{\text{Earth}}}{r^{2}}
 \end{align}
-wich gives the acceleration
-\begin{align*}
-f^{(2)}(r) = \frac{M_{\text{Earth}} 4\pi ^{2} }{r^{2}} \mathrm{AU}^{3}/ \mathrm{yr}^{2}.
-\end{align*}
+Where $G=6.67\cdot10^-11\frac{m^3}{kgs^2}$ is the gravitational constant, $m_1$ and $m_2$ are the masses of the bodies exerting a force upon each other, $F_G$ is said force, and $r$ is the distance between the bodies. Using Keplers laws this can be further simplified to
+\begin{align}
+F_G=\frac{{M_{\odot}M_\text{Earth}} 4\pi ^{2} }{r^{2}} \mathrm{AU}^{3}/ \mathrm{yr}^{2}.
+\end{align}
+something
+\begin{align}
+\frac{M_{\text{Earth}} 4\pi ^{2}}{r^{2}}  \mathrm{AU}^{3}/ \mathrm{yr}^{2}
+\end{align}
 
 
 
